# nlp-intelligence-system

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  PLAN.md  README.md  RUNBOOK.md  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
notebooks/: 01_eda.ipynb  02_vectorizer_comparison.ipynb  03_embeddings.ipynb
src/nlp_system/: __init__.py  config.py  utils.py
src/nlp_system/api/: __init__.py  main.py  schemas.py
src/nlp_system/data/: download.py  make_dataset.py
src/nlp_system/features/: __init__.py  embeddings.py  vectorizers.py
src/nlp_system/models/: __init__.py  train.py
src/nlp_system/pipeline/: __init__.py  nltk_setup.py  preprocess.py
src/nlp_system/search/: __init__.py  build_index.py  engine.py
tests/: test_preprocess.py  test_search_and_api.py  test_vectorizers.py
