[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-intelligence-system"
version = "0.1.0"
description = "Production-grade NLP sentiment classifier + BM25 search engine on noisy real-world text."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aly Ayman" }]
keywords = ["nlp", "sentiment-analysis", "bm25", "tfidf", "mlops", "fastapi"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "rank-bm25>=0.2.2",
    "gensim>=4.3",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
    "joblib>=1.3",
    "mlflow>=2.12",
    "dvc[s3]>=3.50",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "kagglehub>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
]

[project.scripts]
nlp-download = "nlp_system.data.download:main"
nlp-data = "nlp_system.data.make_dataset:main"
nlp-train = "nlp_system.models.train:main"
nlp-index = "nlp_system.search.build_index:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 90

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
